fix image size alignright/left

--- a/wp-content/themes/modern-journalist/sass/abstracts/_layout.scss
+++ b/wp-content/themes/modern-journalist/sass/abstracts/_layout.scss
@@ -19,7 +19,7 @@ $post__content-width: 660px;
 $block-max-float-small: 200px;
 
 $block-float: 50vw;
-$block-max-float: 300px;
+$block-max-float: 350px;
 
 $block-med: 80%;
 
